<resources>
    <string name="app_name">Bluetooth Demo</string>

    <string name="action_settings">Settings</string>

    <string name="button_scan">Scan for devices</string>
    <string name="hint_uuid">UUID or Mac address</string>
    <string name="bt_clear">Clear</string>
    <string name="toast_invalid_uuid">Invalid UUID or address entered. Please check it and try again.</string>
    <string name="found_device">Found device: %s\n</string>
    <string name="connected">Device connected</string>
    <string name="status_connecting">Connecting…</string>
    <string name="status_discovering">Discovering services…</string>
    <string name="status_error">Error</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_connected">Ready</string>
    <string name="tv_write_char">Write characteristic</string>
    <string name="tv_write_char_detail">Tap button to write a value to characteristic A</string>
    <string name="tv_read_char">Read characteristic</string>
    <string name="tv_read_char_detail">Current value of characteristic B</string>
    <string name="tv_char_footnote">Make sure to change the UUIDs of characteristics A and B and of the service before running the code.</string>
    <string name="tv_char_default_value">…</string>
    <string name="bt_write">Write \'%s\'</string>
</resources>
