<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context=".MainActivity">

        <LinearLayout
            android:id="@+id/form"
            style="@style/ContentBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/et_uuid"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/hint_uuid"
                    android:inputType="textCapCharacters"/>

                <ImageButton
                    android:id="@+id/bt_clear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@null"
                    android:contentDescription="@string/bt_clear"
                    android:padding="10dp"
                    android:src="@drawable/ic_clear"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/bt_scan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@string/button_scan"/>

                <ProgressBar
                    android:id="@+id/busy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:visibility="invisible"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/scan_results"
            style="@style/ContentBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:maxHeight="40dp"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:id="@+id/tv_scan_results"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="bottom"
                android:maxLines="1000"
                android:scrollbars="vertical"
                tools:text="Found device: XX:XX:XX:XX"/>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_status"
            style="@style/ContentBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/connected"
            android:textStyle="bold"
            android:visibility="gone"
            tools:visibility="visible"/>

        <LinearLayout
            android:id="@+id/read_write"
            style="@style/ContentBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone"
            tools:visibility="visible">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_write_char"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_write_char_detail"/>

            <Button
                android:id="@+id/bt_write"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                tools:text="Write '0'"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_read_char"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_read_char_detail"/>

            <TextView
                android:id="@+id/tv_characteristic"
                style="@style/ContentBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/tv_char_default_value"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tv_char_footnote"
                android:textSize="11sp"/>
        </LinearLayout>
    </LinearLayout>
</ScrollView>